export const snapshot = {};

snapshot[`breadcrumbs snapshot - default items 1`] = `
'
    <nav class="breadcrumbs" aria-label="Breadcrumb">
      <ol class="breadcrumbs__list">
        
        <li class="breadcrumbs__item">
          <a href="/" class="breadcrumbs__link">Home</a>
          <span class="breadcrumbs__separator" aria-hidden="true">/</span>
        </li>
        <li class="breadcrumbs__item">
          <a href="/blog/" class="breadcrumbs__link">Blog</a>
          <span class="breadcrumbs__separator" aria-hidden="true">/</span>
        </li>
        <li class="breadcrumbs__item">
          <span class="breadcrumbs__current" aria-current="page">Article Title</span>
          
        </li>
      </ol>
    </nav>
  '
`;

snapshot[`breadcrumbs snapshot - icons and compact variant 1`] = `
'
    <nav class="breadcrumbs breadcrumbs--compact" aria-label="Breadcrumb">
      <ol class="breadcrumbs__list">
        
        <li class="breadcrumbs__item">
          <a href="/" class="breadcrumbs__link">Home</a>
          <span class="breadcrumbs__separator" aria-hidden="true">></span>
        </li>
        <li class="breadcrumbs__item">
          <a href="/blog/" class="breadcrumbs__link"><span class="breadcrumbs__icon" aria-hidden="true">📝</span>Blog</a>
          <span class="breadcrumbs__separator" aria-hidden="true">></span>
        </li>
        <li class="breadcrumbs__item">
          <span class="breadcrumbs__current" aria-current="page"><span class="breadcrumbs__icon" aria-hidden="true">📄</span>Article</span>
          
        </li>
      </ol>
    </nav>
  '
`;
